Se añadieron los servicios de comunicacion y el contrato de servicios para acceder al login, se añadio la logica del servidor host

--- a/FliplloServidor/Flipllo/InterfazGrafica/App.config
+++ b/FliplloServidor/Flipllo/InterfazGrafica/App.config
@@ -1,6 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  
+  <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="mexBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <services>
+      <service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeUsuario">
+        <endpoint address="ServiciosDeUsuario" binding="netTcpBinding" bindingConfiguration="" contract ="ServiciosDeComunicacion.IServiciosDeUsuario"/>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8081"/>
+            <add baseAddress="net.tcp://localhost:8091"/>
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+  </system.serviceModel>
 </configuration>
