--- a/FliplloServidor/Flipllo/LogicaDeNegocios/LogicaDeNegocios.csproj
+++ b/FliplloServidor/Flipllo/LogicaDeNegocios/LogicaDeNegocios.csproj
@@ -1,7 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="System.ServiceModel">
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.ServiceModel.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Clases\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ServiciosDeComunicacion\ServiciosDeComunicacion.csproj" />
+  </ItemGroup>
 
 </Project>
