Se actualizo la configuracion del servidor y los nombres de los contratos de comunicacion.

--- a/FliplloServidor/Flipllo/InterfazGrafica/App.config
+++ b/FliplloServidor/Flipllo/InterfazGrafica/App.config
@@ -3,26 +3,43 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehavior">
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
           <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
+    
+    <bindings>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_IServiciosDeUsuario" receiveTimeout="00:15:00" sendTimeout="00:15:00"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
+          <security mode="None">
+            <transport clientCredentialType="None" protectionLevel="None"/>
+            <message clientCredentialType="None"/>
+          </security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    
     <services>
-      <service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeUsuario">
-        <endpoint address="ServiciosDeUsuario" binding="netTcpBinding" bindingConfiguration="" contract ="ServiciosDeComunicacion.IServiciosDeUsuario"/>
+      <service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeComunicacion">
+        <endpoint address="ServiciosDeComunicacion"
+                  binding="netTcpBinding"
+                  bindingConfiguration="NetTcpBinding_IServiciosDeUsuario" 
+                  contract="ServiciosDeComunicacion.IAdministradorDeUsuarios"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8081"/>
-            <add baseAddress="net.tcp://localhost:8091"/>
+            <add baseAddress="http://192.168.50.96:8081"/>
+            <add baseAddress="net.tcp://192.168.50.96:8091"/>
           </baseAddresses>
         </host>
+      
       </service>
     </services>
+    
   </system.serviceModel>
 </configuration>
