--- a/FliplloServidor/Flipllo/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
+++ b/FliplloServidor/Flipllo/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
@@ -44,9 +44,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IServiciosDeUsuario.cs" />
+    <Compile Include="IAdministradorDeUsuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiciosDeUsuario.cs" />
+    <Compile Include="ServiciosDeComunicacion.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
