--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /FliplloCliente/LogicaDeNegocios
 /FliplloCliente/Recursos_en-US
 /FliplloCliente/Recursos_es-MX
+/FliplloCliente/.vs/FliplloCliente/v16/Server/sqlite3/storage.ide-shm
+/FliplloCliente/.vs/FliplloCliente/v16/Server/sqlite3/storage.ide-wal
