--- a/FliplloCliente/LogicaDeNegocios/app.config
+++ b/FliplloCliente/LogicaDeNegocios/app.config
@@ -8,13 +8,21 @@
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
+                <binding name="NetTcpBinding_IServiciosDeChat">
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeComunicacion"
+            <endpoint address="net.tcp://192.168.50.214:8091/ServiciosDeComunicacion"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IAdministradorDeUsuarios"
                 contract="ServiciosDeComunicacion.IAdministradorDeUsuarios"
-                name="NetTcpBinding_IAdministradorDeUsuarios" />
+                name="NetTcpBinding_IAdministradorDeUsuarios1" />
+            <endpoint address="net.tcp://192.168.50.214:9091/ServiciosDeComunicacion"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeChat"
+                contract="ServiciosDeChat.IServiciosDeChat" name="NetTcpBinding_IServiciosDeChat" />
         </client>
     </system.serviceModel>
 </configuration>
