Se añadio la implementacion del servicio de chat junto a su hilo en la interfaz grafica y la configuracion de red de este.

--- a/FliplloServidor/Flipllo/InterfazGrafica/App.config
+++ b/FliplloServidor/Flipllo/InterfazGrafica/App.config
@@ -13,17 +13,29 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    
-    <bindings>
-      <netTcpBinding>
-        <binding name="NetTcpBinding_IServiciosDeUsuario" receiveTimeout="00:15:00" sendTimeout="00:15:00"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
-          <security mode="None">
-            <transport clientCredentialType="None" protectionLevel="None"/>
-            <message clientCredentialType="None"/>
-          </security>
-        </binding>
-      </netTcpBinding>
-    </bindings>
+
+		<bindings>
+			<netTcpBinding>
+				<binding name="NetTcpBinding_IServiciosDeUsuario" receiveTimeout="00:15:00" sendTimeout="00:15:00"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
+					<security mode="None">
+						<transport clientCredentialType="None" protectionLevel="None"/>
+						<message clientCredentialType="None"/>
+					</security>
+				</binding>
+				<binding name="NetTcpBinding_IServiciosDeChat" receiveTimeout="00:15:00" sendTimeout="00:15:00"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
+					<security mode="None">
+						<transport clientCredentialType="None" protectionLevel="None"/>
+						<message clientCredentialType="None"/>
+					</security>
+				</binding>
+				<binding name="NetTcpBinding_IServiciosDeChatCallback" receiveTimeout="00:15:00" sendTimeout="00:15:00"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
+				<security mode="None">
+					<transport clientCredentialType="None" protectionLevel="None"/>
+					<message clientCredentialType="None"/>
+				</security>
+				</binding>
+			</netTcpBinding>
+		</bindings>
     
     <services>
       <service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeComunicacion">
@@ -33,12 +45,41 @@
                   contract="ServiciosDeComunicacion.IAdministradorDeUsuarios"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://192.168.50.96:8081"/>
-            <add baseAddress="net.tcp://192.168.50.96:8091"/>
+            <add baseAddress="http://192.168.50.214:8081"/>
+            <add baseAddress="net.tcp://192.168.50.214:8091"/>
           </baseAddresses>
         </host>
       
       </service>
+				
+		<service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeChat">
+        <endpoint address="ServiciosDeComunicacion"
+                  binding="netTcpBinding"
+                  bindingConfiguration="NetTcpBinding_IServiciosDeChat" 
+                  contract="ServiciosDeComunicacion.IServiciosDeChat"/>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://192.168.50.214:9081"/>
+            <add baseAddress="net.tcp://192.168.50.214:9091"/>
+          </baseAddresses>
+        </host>
+      
+      </service>
+
+			<service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.IServiciosDeChatCallback">
+				<endpoint address="ServiciosDeComunicacion"
+                  binding="netTcpBinding"
+                  bindingConfiguration="NetTcpBinding_IServiciosDeChatCallback"
+                  contract="ServiciosDeComunicacion.IServiciosDeChatCallback"/>
+				<host>
+					<baseAddresses>
+						<add baseAddress="http://192.168.50.214:1081"/>
+						<add baseAddress="net.tcp://192.168.50.214:1091"/>
+					</baseAddresses>
+				</host>
+
+			</service>
+			
     </services>
     
   </system.serviceModel>
