--- a/FliplloCliente/InterfazGrafica/App.config
+++ b/FliplloCliente/InterfazGrafica/App.config
@@ -4,56 +4,44 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
 	</startup>
 	<system.serviceModel>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior name="mexBehavior">
-          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
-          <serviceMetadata httpGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="true"/>
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior name="mexBehavior">
+					<dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+					<serviceMetadata httpGetEnabled="true" />
+					<serviceDebug includeExceptionDetailInFaults="true"/>
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
 
-    <bindings>
-      <netTcpBinding>
-        <binding name="NetTcpBinding_IAdministradorDeUsuarios" receiveTimeout="00:10:10" sendTimeout="00:10:10"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
-          <security mode="None">
-            <transport clientCredentialType="None" protectionLevel="None" />
-            <message clientCredentialType="None" />
-          </security>
-        </binding>
-      </netTcpBinding>
-        
-    </bindings>
-    
+		<bindings>
+			<netTcpBinding>
+				<binding name="NetTcpBinding_IServiciosDeFlipllo" receiveTimeout="00:10:10" sendTimeout="00:10:10"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
+					<security mode="None">
+						<transport clientCredentialType="None" protectionLevel="None" />
+						<message clientCredentialType="None" />
+					</security>
+				</binding>
+			</netTcpBinding>
+		</bindings>
 
+		<client>
+			<endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeComunicacion"
+       binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+       contract="ServiciosDeFlipllo.IServiciosDeFlipllo" name="NetTcpBinding_IServiciosDeFlipllo">
+				<identity>
+					<userPrincipalName value="CESARHDEZAP\CesarHA" />
+				</identity>
+			</endpoint>
 
-    
-  <client>
-      <endpoint address="net.tcp://192.168.43.53:8091/ServiciosDeComunicacion"
-			 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IAdministradorDeUsuarios"
-			 contract="ServiciosDeComunicacion.IAdministradorDeUsuarios" name="NetTcpBinding_IAdministradorDeUsuarios">
-        <identity>
-          <userPrincipalName value="CESARHDEZAP\CesarHA" />
-        </identity>
-      </endpoint>
+			<endpoint address="net.tcp://192.168.43.96:8091/ServiciosDeComunicacion"
+       binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+       contract="ServiciosDeFlipllo.IServiciosDeFliplloCallback" name="NetTcpBinding_IServiciosDeFliplloCallback">
+				<identity>
+					<userPrincipalName value="CESARHDEZAP\CesarHA" />
+				</identity>
+			</endpoint>
+		</client>
 
-      <endpoint address="net.tcp://192.168.43.53:9091/ServiciosDeComunicacion"
-			 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IAdministradorDeUsuarios"
-			 contract="ServiciosDeComunicacion.IChatCallback" name="NetTcpBinding_IChatCallback">
-        <identity>
-          <userPrincipalName value="CESARHDEZAP\CesarHA" />
-        </identity>
-      </endpoint>
-
-      <endpoint address="net.tcp://192.168.43.53:9091/ServiciosDeComunicacion"
-			 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IAdministradorDeUsuarios"
-			 contract="ServiciosDeChat.IServiciosDeChat" name="NetTcpBinding_IServiciosDeChat">
-        <identity>
-          <userPrincipalName value="CESARHDEZAP\CesarHA" />
-        </identity>
-      </endpoint>
-    </client>
-    
 	</system.serviceModel>
 </configuration>
