--- a/FliplloCliente/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
+++ b/FliplloCliente/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2A58340A-E7CF-4274-8981-88FA2680B0C9}</ProjectGuid>
+    <ProjectGuid>{2DCF5E4F-245C-40CA-8039-CC3763BB42F2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LogicaDeNegocios</RootNamespace>
-    <AssemblyName>LogicaDeNegocios</AssemblyName>
+    <RootNamespace>ServiciosDeComunicacion</RootNamespace>
+    <AssemblyName>ServiciosDeComunicacion</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,7 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -44,53 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClasesDeDominio\Chat.cs" />
-    <Compile Include="Connected Services\ServiciosDeFlipllo\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
-    <Compile Include="Excepciones\RecursoNoEncontradoException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiciosDeRecursosDeIdioma.cs" />
-    <Compile Include="Servicios\ServiciosDeValidacion.cs" />
+    <Compile Include="Proxy\ChatDelServidorProxy.cs" />
+    <Compile Include="ServiciosDeCallback.cs" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="Connected Services\ServiciosDeFlipllo\item.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\ServiciosDeFlipllo\item1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\ServiciosDeFlipllo\item2.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\ServiciosDeFlipllo\item3.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\ServiciosDeFlipllo\ServiciosDeFlipllo.wsdl" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\ServiciosDeFlipllo\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\ServiciosDeFlipllo\item.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\ServiciosDeFlipllo\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\ServiciosDeFlipllo\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\ServiciosDeFlipllo\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
+    <ProjectReference Include="..\LogicaDeNegocios\LogicaDeNegocios.csproj">
+      <Project>{2a58340a-e7cf-4274-8981-88fa2680b0c9}</Project>
+      <Name>LogicaDeNegocios</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
