--- a/FliplloServidor/Flipllo/AccesoABaseDeDatos/AccesoABaseDeDatos.csproj
+++ b/FliplloServidor/Flipllo/AccesoABaseDeDatos/AccesoABaseDeDatos.csproj
@@ -50,7 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UsuarioDAO.cs" />
+    <Compile Include="Cofre.cs">
+      <DependentUpon>ModelFlipllo.tt</DependentUpon>
+    </Compile>
     <Compile Include="ModelFlipllo.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -66,10 +68,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ModelFlipllo.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Puntuacion.cs">
+    <Compile Include="Objeto.cs">
       <DependentUpon>ModelFlipllo.tt</DependentUpon>
     </Compile>
+    <Compile Include="ObjetoEnCofre.cs">
+      <DependentUpon>ModelFlipllo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ObjetoEnInventario.cs">
+      <DependentUpon>ModelFlipllo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs">
       <DependentUpon>ModelFlipllo.tt</DependentUpon>
     </Compile>
