--- a/FliplloServidor/Flipllo/InterfazGrafica/App.config
+++ b/FliplloServidor/Flipllo/InterfazGrafica/App.config
@@ -1,24 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-  </startup>
-
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework"
+    type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+    requirePermission="false"/>
   </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
+
   <connectionStrings>
-    <add name="ModelFliplloContainer" connectionString="metadata=res://*/ModelFlipllo.csdl|res://*/ModelFlipllo.ssdl|res://*/ModelFlipllo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CESARHDEZAP;initial catalog=BDFlipllo;user id=fliplloserver;password=qwerasdfzxcv;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ModelFliplloContainer"
+      connectionString="metadata=res://*/ModelFlipllo.csdl|res://*/ModelFlipllo.ssdl|res://*/ModelFlipllo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CESARHDEZAP;initial catalog=BDFlipllo;user id=fliplloserver;password=qwerasdfzxcv;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient"/>
   </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="mssqllocaldb"/>
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
 
@@ -27,7 +33,7 @@
       <serviceBehaviors>
         <behavior name="mexBehavior">
           <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
-          <serviceMetadata httpGetEnabled="true" />
+          <serviceMetadata httpGetEnabled="true"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
@@ -35,70 +41,27 @@
 
 		<bindings>
 			<netTcpBinding>
-				<binding name="NetTcpBinding_IServiciosDeUsuario" receiveTimeout="00:15:00" sendTimeout="00:15:00"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
+				<binding name="NetTcpBinding_IServiciosDeFlipllo" receiveTimeout="00:01:00" sendTimeout="00:01:00" maxBufferPoolSize="2147483647"
+					maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
 					<security mode="None">
 						<transport clientCredentialType="None" protectionLevel="None"/>
 						<message clientCredentialType="None"/>
 					</security>
-				</binding>
-				<binding name="NetTcpBinding_IServiciosDeChat" receiveTimeout="00:15:00" sendTimeout="00:15:00"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
-					<security mode="None">
-						<transport clientCredentialType="None" protectionLevel="None"/>
-						<message clientCredentialType="None"/>
-					</security>
-				</binding>
-				<binding name="NetTcpBinding_IServiciosDeChatCallback" receiveTimeout="00:15:00" sendTimeout="00:15:00"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
-				<security mode="None">
-					<transport clientCredentialType="None" protectionLevel="None"/>
-					<message clientCredentialType="None"/>
-				</security>
 				</binding>
 			</netTcpBinding>
 		</bindings>
     
     <services>
-      <service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeComunicacion">
-        <endpoint address="ServiciosDeComunicacion"
-                  binding="netTcpBinding"
-                  bindingConfiguration="NetTcpBinding_IServiciosDeUsuario" 
-                  contract="ServiciosDeComunicacion.IAdministradorDeUsuarios"/>
+      <service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeFlipllo.ServiciosDeFlipllo">
+        <endpoint address="ServiciosDeComunicacion" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+          contract="ServiciosDeComunicacion.InterfacesDeServicios.IServiciosDeFlipllo"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://192.168.50.214:8081"/>
-            <add baseAddress="net.tcp://192.168.50.214:8091"/>
+            <add baseAddress="http://192.168.50.96:8081"/>
+            <add baseAddress="net.tcp://192.168.50.96:8091"/>
           </baseAddresses>
         </host>
-      
       </service>
-				
-		<service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeChat">
-        <endpoint address="ServiciosDeComunicacion"
-                  binding="netTcpBinding"
-                  bindingConfiguration="NetTcpBinding_IServiciosDeChat" 
-                  contract="ServiciosDeComunicacion.IServiciosDeChat"/>
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://192.168.50.214:9081"/>
-            <add baseAddress="net.tcp://192.168.50.214:9091"/>
-          </baseAddresses>
-        </host>
-      
-      </service>
-
-			<service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.IServiciosDeChatCallback">
-				<endpoint address="ServiciosDeComunicacion"
-                  binding="netTcpBinding"
-                  bindingConfiguration="NetTcpBinding_IServiciosDeChatCallback"
-                  contract="ServiciosDeComunicacion.IServiciosDeChatCallback"/>
-				<host>
-					<baseAddresses>
-						<add baseAddress="http://192.168.50.214:1081"/>
-						<add baseAddress="net.tcp://192.168.50.214:1091"/>
-					</baseAddresses>
-				</host>
-
-			</service>
-			
     </services>
     
   </system.serviceModel>
