--- a/FliplloServidor/Flipllo/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
+++ b/FliplloServidor/Flipllo/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
@@ -46,18 +46,31 @@
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chat.cs" />
-    <Compile Include="IAdministradorDeUsuarios.cs" />
-    <Compile Include="IServiciosDeChatCallback.cs" />
-    <Compile Include="IServiciosDeChat.cs" />
+    <Compile Include="InterfacesDeServicios\IServiciosDeFlipllo.cs" />
+    <Compile Include="InterfacesDeServicios\IServiciosDeCallBack.cs" />
+    <Compile Include="InterfacesDeServicios\IServiciosDeChat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiciosDeChat.cs" />
-    <Compile Include="ServiciosDeComunicacion.cs" />
+    <Compile Include="ServiciosDeFlipllo\Chat.cs" />
+    <Compile Include="ServiciosDeFlipllo\IControladorDeServiciosDeFlipllo.cs" />
+    <Compile Include="ServiciosDeFlipllo\IControladorDeServiciosDeHost.cs" />
+    <Compile Include="ServiciosDeFlipllo\ServiciosDeChat.cs" />
+    <Compile Include="ServiciosDeFlipllo\ServiciosDeConexion.cs" />
+    <Compile Include="ServiciosDeFlipllo\ServiciosDeHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LogicaDeNegocios\LogicaDeNegocios.csproj">
+      <Project>{DB7D49D7-F783-4787-AB7B-8C8F7F49F074}</Project>
+      <Name>LogicaDeNegocios</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controladores\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
