Se añadio los servicios de login, chat global, salas.

--- a/FliplloServidor/Flipllo/InterfazGrafica/App.config
+++ b/FliplloServidor/Flipllo/InterfazGrafica/App.config
@@ -32,29 +32,48 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehavior">
-          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
-          <serviceMetadata httpGetEnabled="true"/>
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="false"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
+          
+          <!--<serviceCredentials>
+            --><!--Aqui quite client certificate--><!--
+            
+            <serviceCertificate findValue="miCertificado" 
+                                storeLocation="LocalMachine"
+                                storeName="My" 
+                                x509FindType="FindBySubjectName"/>
+          </serviceCredentials>-->
         </behavior>
       </serviceBehaviors>
     </behaviors>
 
 		<bindings>
 			<netTcpBinding>
-				<binding name="NetTcpBinding_IServiciosDeFlipllo" receiveTimeout="00:01:00" sendTimeout="00:01:00" maxBufferPoolSize="2147483647"
-					maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
-					<security mode="None">
-						<transport clientCredentialType="None" protectionLevel="None"/>
-						<message clientCredentialType="None"/>
-					</security>
+				<binding name="NetTcpBinding_IServiciosDeFlipllo" 
+                 receiveTimeout="00:01:00" 
+                 sendTimeout="00:01:00" 
+                 maxBufferPoolSize="2147483647"
+					       maxReceivedMessageSize="2147483647" 
+                 maxBufferSize="2147483647"
+                 transactionFlow="true">
+          
+          <security mode="None">
+            <transport clientCredentialType="None" protectionLevel="None"/>
+            <message clientCredentialType="None"/>
+          </security>
 				</binding>
 			</netTcpBinding>
 		</bindings>
-    
-    <services>
-      <service behaviorConfiguration="mexBehavior" name="ServiciosDeComunicacion.ServiciosDeFlipllo.ServiciosDeFlipllo">
-        <endpoint address="ServiciosDeComunicacion" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
-          contract="ServiciosDeComunicacion.InterfacesDeServicios.IServiciosDeFlipllo"/>
+
+    <services>      
+      <service name="ServiciosDeComunicacion.Servicios.ServiciosDeFlipllo" 
+               behaviorConfiguration="mexBehavior" >
+        
+        <endpoint address="ServiciosDeComunicacion.ServiciosDeFlipllo"
+                  binding="netTcpBinding" 
+                  bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+                  contract="ServiciosDeComunicacion.Interfaces.InterfacesDeServiciosDeFlipllo.IServiciosDeFlipllo"/>
+        
         <host>
           <baseAddresses>
             <add baseAddress="http://192.168.50.96:8081"/>
@@ -63,6 +82,5 @@
         </host>
       </service>
     </services>
-    
   </system.serviceModel>
 </configuration>
