--- a/FliplloServidor/Flipllo/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
+++ b/FliplloServidor/Flipllo/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,33 +33,49 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.6.8\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.IdentityModel" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Primitives, Version=4.6.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ServiceModel.Primitives.4.6.0\lib\net461\System.ServiceModel.Primitives.dll</HintPath>
     </Reference>
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InterfacesDeServicios\IServiciosDeFlipllo.cs" />
-    <Compile Include="InterfacesDeServicios\IServiciosDeCallBack.cs" />
-    <Compile Include="InterfacesDeServicios\IServiciosDeChat.cs" />
+    <Compile Include="Clases\AdministradorDeHostDeServicios.cs" />
+    <Compile Include="Clases\HostDeServiciosDeJuego.cs" />
+    <Compile Include="Interfaces\IHostDeServicio.cs" />
+    <Compile Include="Interfaces\InterfacesDeServiciosDeFlipllo\IServiciosDeCallBackChatGlobal.cs" />
+    <Compile Include="Interfaces\InterfacesDeServiciosDeJuego\IServiciosDeCallBackJuego.cs" />
+    <Compile Include="Interfaces\InterfacesDeServiciosDeJuego\IServiciosDeJuego.cs" />
+    <Compile Include="Servicios\ServiciosDeJuego.cs" />
+    <Compile Include="Interfaces\InterfacesDeServiciosDeFlipllo\IServiciosDeCallBackSala.cs" />
+    <Compile Include="Interfaces\InterfacesDeServiciosDeFlipllo\IServiciosDeFliplloDeSesion.cs" />
+    <Compile Include="Interfaces\InterfacesDeServiciosDeFlipllo\IServiciosDeCallBackUsuario.cs" />
+    <Compile Include="Interfaces\InterfacesDeServiciosDeFlipllo\IServiciosDeFliplloDeChat.cs" />
+    <Compile Include="Interfaces\InterfacesDeServiciosDeFlipllo\IServiciosDeFliplloDeSalas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiciosDeFlipllo\Chat.cs" />
-    <Compile Include="ServiciosDeFlipllo\IControladorDeServiciosDeFlipllo.cs" />
-    <Compile Include="ServiciosDeFlipllo\IControladorDeServiciosDeHost.cs" />
-    <Compile Include="ServiciosDeFlipllo\ServiciosDeChat.cs" />
-    <Compile Include="ServiciosDeFlipllo\ServiciosDeConexion.cs" />
-    <Compile Include="ServiciosDeFlipllo\ServiciosDeHost.cs" />
+    <Compile Include="Clases\Chat.cs" />
+    <Compile Include="Interfaces\Controladores\IControladorDeActualizacionDePantalla.cs" />
+    <Compile Include="Servicios\ServiciosDeChatGlobal.cs" />
+    <Compile Include="Servicios\ServiciosDeSesion.cs" />
+    <Compile Include="Clases\HostDeServiciosDeFlipllo.cs" />
+    <Compile Include="Servicios\ServiciosDeSalas.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -69,9 +86,7 @@
       <Name>LogicaDeNegocios</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controladores\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VSToolsPath Condition="'$(VSToolsPath)' == '' and '$(VisualStudioVersion)' != '' and '$(VisualStudioVersion)' != '11.0'">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
