Logica de juego Adicion de pantallas de juego Implementacion de servicios de WCF Adicion de recursos graficos

--- a/FliplloCliente/InterfazGrafica/App.config
+++ b/FliplloCliente/InterfazGrafica/App.config
@@ -5,43 +5,25 @@
 	</startup>
 	<system.serviceModel>
 		<behaviors>
-			<serviceBehaviors>
-				<behavior name="mexBehavior">
-					<dataContractSerializer maxItemsInObjectGraph="2147483647"/>
-					<serviceMetadata httpGetEnabled="true" />
-					<serviceDebug includeExceptionDetailInFaults="true"/>
-				</behavior>
-			</serviceBehaviors>
-		</behaviors>
-
-		<bindings>
-			<netTcpBinding>
-				<binding name="NetTcpBinding_IServiciosDeFlipllo" receiveTimeout="00:10:10" sendTimeout="00:10:10"  maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647">
-					<security mode="None">
-						<transport clientCredentialType="None" protectionLevel="None" />
-						<message clientCredentialType="None" />
-					</security>
-				</binding>
-			</netTcpBinding>
-		</bindings>
-
-		<client>
-			<endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeComunicacion"
-       binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
-       contract="ServiciosDeFlipllo.IServiciosDeFlipllo" name="NetTcpBinding_IServiciosDeFlipllo">
-				<identity>
-					<userPrincipalName value="CESARHDEZAP\CesarHA" />
-				</identity>
-			</endpoint>
-
-			<endpoint address="net.tcp://192.168.43.96:8091/ServiciosDeComunicacion"
-       binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
-       contract="ServiciosDeFlipllo.IServiciosDeFliplloCallback" name="NetTcpBinding_IServiciosDeFliplloCallback">
-				<identity>
-					<userPrincipalName value="CESARHDEZAP\CesarHA" />
-				</identity>
-			</endpoint>
-		</client>
+      
+    </behaviors>
+<bindings>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_IServiciosDeFlipllo">
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+            </netTcpBinding>
+        </bindings>
+        <client>
+            <endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeComunicacion.ServiciosDeFlipllo"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+                contract="ServiciosDeFlipllo.IServiciosDeFlipllo" name="NetTcpBinding_IServiciosDeFlipllo" />
+						<endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeComunicacion.ServiciosDeFlipllo"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+                contract="ServiciosDeFlipllo.IServiciosDeFliplloCallback" name="NetTcpBinding_IServiciosDeFlipllo" />
+        </client>
 
 	</system.serviceModel>
 </configuration>
