Añadieron pruebas, funcionalidad completa para el juego mediante los dos servicios implementados.

--- a/FliplloServidor/Flipllo/AccesoABaseDeDatos/AccesoABaseDeDatos.csproj
+++ b/FliplloServidor/Flipllo/AccesoABaseDeDatos/AccesoABaseDeDatos.csproj
@@ -91,6 +91,7 @@
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
     <None Include="ModelFlipllo.edmx.diagram">
       <DependentUpon>ModelFlipllo.edmx</DependentUpon>
     </None>
