--- a/FliplloServidor/Flipllo/InterfazGrafica/App.config
+++ b/FliplloServidor/Flipllo/InterfazGrafica/App.config
@@ -49,9 +49,9 @@
 
 		<bindings>
 			<netTcpBinding>
-				<binding name="NetTcpBinding_IServiciosDeFlipllo" 
-                 receiveTimeout="00:01:00" 
-                 sendTimeout="00:01:00" 
+				<binding name="NetTcpBinding_IServiciosDeFlipllo" closeTimeout="00:20:00"
+                 receiveTimeout="00:20:00" 
+                 sendTimeout="00:20:00" 
                  maxBufferPoolSize="2147483647"
 					       maxReceivedMessageSize="2147483647" 
                  maxBufferSize="2147483647"
@@ -65,22 +65,38 @@
 			</netTcpBinding>
 		</bindings>
 
-    <services>      
-      <service name="ServiciosDeComunicacion.Servicios.ServiciosDeFlipllo" 
-               behaviorConfiguration="mexBehavior" >
-        
+    <services>
+      <service name="ServiciosDeComunicacion.Servicios.ServiciosDeFlipllo" behaviorConfiguration="mexBehavior">
+
         <endpoint address="ServiciosDeComunicacion.ServiciosDeFlipllo"
-                  binding="netTcpBinding" 
+                  binding="netTcpBinding"
                   bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
                   contract="ServiciosDeComunicacion.Interfaces.InterfacesDeServiciosDeFlipllo.IServiciosDeFlipllo"/>
+
         
         <host>
           <baseAddresses>
-            <add baseAddress="http://192.168.50.96:8081"/>
-            <add baseAddress="net.tcp://192.168.50.96:8091"/>
+            <add baseAddress="http://192.168.43.114:8081/ServiciosDeFlipllo"/>
+            <add baseAddress="net.tcp://192.168.43.114:8091/ServiciosDeFlipllo"/>
           </baseAddresses>
         </host>
       </service>
+
+      <service name="ServiciosDeComunicacion.Servicios.ServiciosDeJuego" behaviorConfiguration="mexBehavior">
+
+        <endpoint address="ServiciosDeComunicacion.ServiciosDeJuego"
+                  binding ="netTcpBinding"
+                  bindingConfiguration ="NetTcpBinding_IServiciosDeFlipllo"
+                  contract="ServiciosDeComunicacion.Interfaces.InterfacesDeServiciosDeJuego.IServiciosDeJuego"/>
+
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://192.168.43.114:8081/ServiciosDeJuego"/>
+            <add baseAddress="net.tcp://192.168.43.114:8091/ServiciosDeJuego"/>
+          </baseAddresses>
+        </host>
+      </service>
+      
     </services>
   </system.serviceModel>
 </configuration>
